# degenagent.fun

./: .gitignore  AGENT_CREATION_FIX.md  Anchor.toml  CLOUDFLARE_DEPLOYMENT.md  COMANDOS_COPIAR_PEGAR.txt  COMPLETE_FIX_GUIDE.md  CRITICAL_STATUS.md  Cargo.toml  DEPLOY.md  DEPLOYMENT_ALTERNATIVES.md  DEPLOYMENT_FINAL_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOY_AHORA.md  DEPLOY_NOW.md  DEPLOY_RAILWAY_SCRIPT.bat  DEPLOY_UPDATE_FRONTEND.bat  DEV_GUIDE.md  DOCS.md  DOCUMENTATION.md  DOMAIN_SETUP.md  EJECUTAR_AHORA.bat  FIXES_APPLIED.md  FIXES_COMPLETADOS.md  IMPROVEMENTS_FROM_VIRTUALS.md  IMPROVEMENTS_IMPLEMENTED.md  INSTALLATION_GUIDE.md  LISTO_PARA_USAR.md  MENU_FIXES.md  NAMECHEAP_DNS_SETUP.txt  NEXT_STEPS.md  PASOS_SIMPLES_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_FIX.md  PRODUCTION_STATUS.md  PRUEBAS_COMPLETADAS.md  QUE_ES_DEGENAGENT.md  QUICK_DEPLOY.md  QUICK_FIX_CHECKLIST.md  QUICK_START.md  QUICK_START_TESTING.md  (+40 more)
backend/: .env.example  .env.mainnet  .env.production  API_KEYS_SETUP.md  CHANGES_SUMMARY.txt  COST_OPTIMIZATION.md  Dockerfile  MAINNET_VERIFICATION.md  PRODUCTION_READINESS.md  PRODUCTION_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START_PRODUCTION.md  RPC_PROVIDERS.md  demo.js  docker-compose.yml  ecosystem.config.js  nginx.conf  package-lock.json  package.json  railway.toml  render-build.sh  testAgent.js  testAgent.ps1  (+1 more)
programs/agent-factory/: Cargo.toml
programs/agent-factory/src/: lib.rs
programs/agent-manager/: Cargo.toml
programs/agent-manager/src/: lib.rs
programs/agent-registry/: Cargo.toml
programs/agent-registry/src/: lib.rs
(+326 files in other folders)
