[package]
name = "agent-factory"
version = "0.1.0"
description = "Factory program for creating AI agents on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_factory"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
