[package]
name = "agent-manager"
version = "0.1.0"
description = "Manager program for AI agents lifecycle and operations"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
